@@ -1,8 +1,5 @@
 package com.wse.shell;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
 import java.util.concurrent.BlockingQueue;
 
 import org.slf4j.Logger;
@@ -14,26 +11,27 @@ public class UnixSort
 {	
 	private final String sortCommand;
 	private final Logger logger = LoggerFactory.getLogger(UnixSort.class);
-	public UnixSort(String sortCommand)
+	private BlockingQueue<String> mergeFileQueue;
+	
+	public UnixSort(String sortCommand, BlockingQueue<String> mergeFileQueue)
 	{
 		this.sortCommand = sortCommand;
+		this.mergeFileQueue = mergeFileQueue;
 	}
 	
 	public void sortFile(String filePath)
 	{
 		ElapsedTime elapsedTime = new ElapsedTime();
 		logger.debug("executeCommand"+this.sortCommand+ filePath+ " > "+filePath+"_sorted");
-		Process process;
 		try 
 		{
-			process = Runtime.getRuntime().exec(this.sortCommand+ filePath+ " > sorted_"+filePath);
-			process.waitFor();
+			Process p  = new ProcessBuilder("/bin/bash", "-c",this.sortCommand+ filePath+ " -o "+filePath+"_sorted").start();
+		    int returnCode = p.waitFor();
+		    mergeFileQueue.add(filePath+"_sorted");
+		    new ProcessBuilder("/bin/bash", "-c","rm "+ filePath).start();
+		    logger.debug("executeCommand Return code : "+returnCode);
 		} 
-		catch (IOException e)
-		{
-			logger.error(e.getMessage(), e);
-		}
-		catch(InterruptedException e)
+		catch (Exception e)
 		{
 			logger.error(e.getMessage(), e);
 		}
